# codecov-haskell

./: .travis.yml  codecov-haskell.cabal
.circleci/: config.yml
exec/: CodecovHaskellMain.hs
src/: CodecovHaskellCmdLine.hs
src/Codecov/Haskell/: CmdLine.hs  Main.hs  Query.hs
src/Trace/Hpc/: Codecov.hs
src/Trace/Hpc/Codecov/: Config.hs  Curl.hs  Lix.hs  Paths.hs  Types.hs
